--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,11 @@
   "private": true,
   "proxy": "http://server:3001/",
   "dependencies": {
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.5.0",
+    "@mui/lab": "^5.0.0-alpha.72",
+    "@mui/material": "^5.5.0",
     "@nosferatu500/react-sortable-tree": "^4.0.2",
     "@reduxjs/toolkit": "^1.6.2",
     "@testing-library/jest-dom": "^5.11.4",
@@ -12,7 +17,9 @@
     "axios": "^0.21.4",
     "bootstrap": "^4.6.0",
     "chart.js": "^3.6.0",
+    "clsx": "^1.1.1",
     "formik": "^2.2.9",
+    "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-axios": "^2.0.5",
     "react-bootstrap": "^1.6.4",
