--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -5,7 +5,7 @@ WORKDIR /usr/src/app
 
 # Install dependencies
 COPY ./package*.json ./
-RUN npm install 
+RUN npm install && npm audit fix
 #--loglevel verbose
 #--silent
 
