--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,6 @@
     "@mui/icons-material": "^5.5.0",
     "@mui/lab": "^5.0.0-alpha.72",
     "@mui/material": "^5.5.0",
-    "@nosferatu500/react-sortable-tree": "^4.0.2",
     "@reduxjs/toolkit": "^1.6.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -29,6 +28,7 @@
     "react-circular-progressbar": "^2.0.4",
     "react-complex-tree": "^1.1.3",
     "react-contexify": "^5.0.0",
+    "react-dnd": "^16.0.1",
     "react-dom": "^17.0.2",
     "react-dropdown-tree-select": "^2.5.1",
     "react-graph-vis": "^1.0.7",
@@ -38,6 +38,7 @@
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-sortable-tree": "^2.8.0",
     "react-toastify": "^7.0.4",
     "react-tsparticles": "^2.0.6",
     "redux": "^4.1.1",
