initial commit for v2

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,21 +1,22 @@
 FROM python:3.9-slim
 
-WORKDIR /usr/src/app
+WORKDIR /app
 
-COPY ./requirements.txt .
+# Copy requirements first
+COPY requirements.docker.txt .
+RUN pip install --no-cache-dir -r requirements.docker.txt
 
-RUN pip install --no-cache-dir -r requirements.txt
+# Copy env files
+COPY .env.docker .env.docker
 
+# Copy the rest of the code
 COPY . .
+
+RUN pip install -e .
+
+# Explicitly set environment variables from .env.docker
+ENV $(cat .env.docker | xargs)
 
 EXPOSE 8000
 
-
-ARG ENV
-ENV ENV=${ENV}
-
-# Start Gunicorn with the number of workers equal to the available CPU cores
-ENTRYPOINT ["sh", "-c"]
-
-# Currently set to 4 workers - replace with  \"$(nproc)\" to use all available workers.
-CMD ["exec gunicorn -w 4 -k uvicorn.workers.UvicornWorker main:app -b 0.0.0.0:8000 --forwarded-allow-ips='*' --timeout 60"]
+CMD ["uvicorn", "src.lexiclean.main:app", "--host", "0.0.0.0", "--port", "8000"]
