refactored CRA to vite.

--- a/client/Makefile
+++ b/client/Makefile
@@ -1,27 +1,27 @@
 .PHONY: install build
 
-REACT_APP_API_BASE_URL_DEV ?= http://localhost:8000
-REACT_APP_API_BASE_URL_STAGING ?= https://api.staging.quickgraph.tech/v1
-REACT_APP_API_BASE_URL_PROD ?= https://api.quickgraph.tech/v1
+VITE_API_BASE_URL_DEV ?= http://localhost:8000
+VITE_API_BASE_URL_STAGING ?= https://api.staging.quickgraph.tech/v1
+VITE_API_BASE_URL_PROD ?= https://api.quickgraph.tech/v1
 
-REACT_APP_DOC_BASE_URL_DEV ?= http://localhost:5000
-REACT_APP_DOC_BASE_URL_STAGING ?= https://docs.staging.quickgraph.tech
-REACT_APP_DOC_BASE_URL_PROD ?= https://docs.quickgraph.tech
+VITE_DOC_BASE_URL_DEV ?= http://localhost:5000
+VITE_DOC_BASE_URL_STAGING ?= https://docs.staging.quickgraph.tech
+VITE_DOC_BASE_URL_PROD ?= https://docs.quickgraph.tech
 
 install:
 	yarn install
 
 build-script-dev:
-	export REACT_APP_API_BASE_URL=$(REACT_APP_API_BASE_URL_DEV) REACT_APP_DOC_BASE_URL=$(REACT_APP_DOC_BASE_URL_DEV) && yarn build
+	export VITE_API_BASE_URL=$(VITE_API_BASE_URL_DEV) VITE_DOC_BASE_URL=$(VITE_DOC_BASE_URL_DEV) && yarn build
 
 build-script-staging:
-	export REACT_APP_API_BASE_URL=$(REACT_APP_API_BASE_URL_STAGING) REACT_APP_DOC_BASE_URL=$(REACT_APP_DOC_BASE_URL_STAGING) && yarn build
+	export VITE_API_BASE_URL=$(VITE_API_BASE_URL_STAGING) VITE_DOC_BASE_URL=$(VITE_DOC_BASE_URL_STAGING) && yarn build
 
 build-script-prod:
-	export REACT_APP_API_BASE_URL=$(REACT_APP_API_BASE_URL_PROD) REACT_APP_DOC_BASE_URL=$(REACT_APP_DOC_BASE_URL_PROD) && yarn build
+	export VITE_API_BASE_URL=$(VITE_API_BASE_URL_PROD) VITE_DOC_BASE_URL=$(VITE_DOC_BASE_URL_PROD) && yarn build
 
 start-script:
-	export REACT_APP_API_BASE_URL=$(REACT_APP_API_BASE_URL) && yarn start
+	export VITE_API_BASE_URL=$(VITE_API_BASE_URL) && yarn start
 
 # DOCKER
 
@@ -32,14 +32,14 @@ build-dev:
 # 	docker build \
 # 		-t client:local \
 # 		--build-arg CADDYFILE=Caddyfile.local \
-# 		--build-arg BASE_API_URL=$(REACT_APP_API_BASE_URL_DEV) \
+# 		--build-arg BASE_API_URL=$(VITE_API_BASE_URL_DEV) \
 # 		-f ./Dockerfile.prod .
 
 # build-staging:
 # 	docker build \
 # 		-t client:staging \
 # 		--build-arg CADDYFILE=Caddyfile.staging \
-# 		--build-arg BASE_API_URL=$(REACT_APP_API_BASE_URL_STAGING) \
+# 		--build-arg BASE_API_URL=$(VITE_API_BASE_URL_STAGING) \
 # 		-f ./Dockerfile.prod .
 
 # build-stage-local:
