--- a/client/Dockerfile.dev
+++ b/client/Dockerfile.dev
@@ -13,7 +13,7 @@ RUN yarn install
 
 COPY . .
 
-ENV REACT_APP_API_BASE_URL=http://localhost:8000
+ENV VITE_API_BASE_URL=http://localhost:8000
 # No /api root used
 
 
