--- a/client/package.json
+++ b/client/package.json
@@ -1,74 +1,37 @@
 {
-  "name": "client",
-  "version": "1.1.0",
-  "private": true,
-  "dependencies": {
-    "@auth0/auth0-react": "^1.10.2",
-    "@emotion/react": "^11.9.3",
-    "@emotion/styled": "^11.9.3",
-    "@mui/icons-material": "^5.8.4",
-    "@mui/lab": "^5.0.0-alpha.90",
-    "@mui/material": "^5.9.0",
-    "@mui/x-data-grid": "^5.13.1",
-    "@types/jest": "^29.4.0",
-    "@types/node": "^18.14.1",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "ajv": "^8.12.0",
-    "ajv-errors": "^3.0.0",
-    "axios": "^0.27.2",
-    "clsx": "^1.2.1",
-    "d3": "^7.6.1",
-    "dotenv": "^16.0.1",
-    "html2canvas": "^1.4.1",
-    "lodash": "^4.17.21",
-    "marked": "^4.3.0",
-    "moment": "^2.29.4",
-    "prop-types": "^15.8.1",
-    "react": "^18.2.0",
-    "react-color": "^2.19.3",
-    "react-dom": "^18.2.0",
-    "react-force-graph": "^1.41.16",
-    "react-helmet": "^6.1.0",
-    "react-kapsule": "^2.4.0",
-    "react-router-dom": "^6.4.1",
-    "react-scripts": "^5.0.1",
-    "recharts": "^2.5.0",
-    "typescript": "^4.9.5",
-    "uuid": "^8.3.2",
-    "web-vitals": "^2.1.4"
-  },
-  "resolutions": {
-    "react-devtools-core": "4.14.0"
-  },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "electron": "electron ./electron/main.js"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.18.9",
-    "babel-jest": "^28.1.3",
-    "electron": "^28.1.0",
-    "esm": "^3.2.25"
+    "@vitejs/plugin-react": "^4.3.3",
+    "vite": "^5.4.10"
+  },
+  "dependencies": {
+    "@auth0/auth0-react": "^2.2.4",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^6.1.5",
+    "@mui/lab": "^6.0.0-beta.13",
+    "@mui/material": "^6.1.5",
+    "@mui/x-data-grid": "^7.22.0",
+    "@mui/x-tree-view": "^7.22.0",
+    "ajv": "^8.17.1",
+    "ajv-errors": "^3.0.0",
+    "axios": "^1.7.7",
+    "clsx": "^2.1.1",
+    "d3": "^7.9.0",
+    "lodash": "^4.17.21",
+    "marked": "^14.1.3",
+    "moment": "^2.30.1",
+    "react": "^18.3.1",
+    "react-color": "^2.19.3",
+    "react-dom": "^18.3.1",
+    "react-force-graph": "^1.44.6",
+    "react-helmet": "^6.1.0",
+    "react-router-dom": "^6.27.0",
+    "recharts": "^2.13.0",
+    "uuid": "^11.0.2"
   }
 }
