chore: Refactor project name and description. update deps.

--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,28 +1,87 @@
 annotated-types==0.7.0
+anyio==4.6.2.post1
+bcrypt==4.2.0
 black==24.10.0
+certifi==2024.8.30
+cffi==1.16.0
 cfgv==3.4.0
 click==8.1.7
+colorama==0.4.6
+coverage==7.6.4
+cryptography==43.0.0
 distlib==0.3.9
+distro==1.9.0
+dnspython==2.7.0
+ecdsa==0.19.0
+email_validator==2.2.0
+exceptiongroup==1.2.2
+fastapi==0.115.4
+fastapi-cli==0.0.4
 filelock==3.16.1
 flake8==7.1.1
+h11==0.14.0
+httpcore==1.0.6
+httptools==0.6.1
+httpx==0.27.2
 identify==2.6.1
+idna==3.10
+iniconfig==2.0.0
 isort==5.13.2
+itsdangerous==2.2.0
+Jinja2==3.1.4
+jiter==0.6.1
+# Editable install with no version control (lexiclean==0.1.0)
+-e /home/tyler/repos/thesis/lexiclean/server/src/lexiclean/server
+loguru==0.7.2
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
 mccabe==0.7.0
+mdurl==0.1.2
+motor==3.6.0
 mypy==1.13.0
 mypy-extensions==1.0.0
 nodeenv==1.9.1
+openai==1.52.2
+orjson==3.10.7
 packaging==24.1
+passlib==1.7.4
 pathspec==0.12.1
 platformdirs==4.3.6
+pluggy==1.5.0
 pre_commit==4.0.1
+pyasn1==0.6.1
 pycodestyle==2.12.1
+pycparser==2.22
 pydantic==2.9.2
+pydantic-extra-types==2.9.0
 pydantic-settings==2.6.0
 pydantic_core==2.23.4
 pyflakes==3.2.0
+Pygments==2.18.0
+PyJWT==2.9.0
+pymongo==4.9
+pytest==8.3.3
+pytest-cov==5.0.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+python-jose==3.3.0
+python-multipart==0.0.16
 PyYAML==6.0.2
--e git+https://github.com/nlp-tlp/quickgraph@39ae2a2f6b7982c0dc5557657b1c8864db5281b8#egg=quickgraph&subdirectory=server
+rich==13.7.1
+rsa==4.9
+shellingham==1.5.4
+six==1.16.0
+sniffio==1.3.1
+starlette==0.41.2
 tomli==2.0.2
+tqdm==4.66.5
+typer==0.12.3
 typing_extensions==4.12.2
+ujson==5.10.0
+uvicorn==0.32.0
+uvloop==0.19.0
 virtualenv==20.27.0
+watchfiles==0.22.0
+websockets==12.0
+whyhow @ file:///home/tyler/repos/whyhow-sdk
+win32-setctime==1.1.0
