--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -3,18 +3,19 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
-name = "quickgraph"
+name = "QuickGraph"
 version = "0.1.0"
 authors = [
     { name = "Tyler Bikaun", email = "tyler.bikaun@research.uwa.edu.au" },
 ]
-description = "QuickGraph - Rapid Collaborative Multi-Task Knowledge Graph Extraction"
+description = "QuickGraph"
 readme = "README.md"
 requires-python = ">=3.8"
 dependencies = [
     "pydantic",
     "pydantic-settings"
 ]
+
 [project.optional-dependencies]
 dev = [
     "pytest>=7.3.1",
@@ -25,6 +26,10 @@ dev = [
     "pre-commit>=3.3.3",
     "flake8>=6.1.0",
 ]
+
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/quickgraph"]
 
 [tool.hatch.metadata]
 allow-direct-references = true
