--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,6 @@
     "vite": "^5.4.10"
   },
   "dependencies": {
-    "@auth0/auth0-react": "^2.2.4",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.5",
@@ -22,6 +21,7 @@
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
     "d3": "^7.9.0",
+    "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "marked": "^14.1.3",
     "moment": "^2.30.1",
