refactor/feat/fix: merge v2+ code into v2 branch

--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -2,6 +2,7 @@ annotated-types==0.7.0
 anyio==4.6.2.post1
 certifi==2024.8.30
 cfgv==3.4.0
+charset-normalizer==3.4.0
 click==8.1.7
 distlib==0.3.9
 dnspython==2.7.0
@@ -10,15 +11,38 @@ email_validator==2.2.0
 exceptiongroup==1.2.2
 fastapi==0.115.4
 filelock==3.16.1
+fsspec==2024.10.0
 h11==0.14.0
+hdbscan==0.8.39
 httpcore==1.0.6
 httpx==0.27.2
+huggingface-hub==0.26.2
 identify==2.6.1
 idna==3.10
+Jinja2==3.1.4
+joblib==1.4.2
 loguru==0.7.2
+MarkupSafe==3.0.2
 motor==3.6.0
+mpmath==1.3.0
+networkx==3.4.2
 nodeenv==1.9.1
+numpy==2.1.2
+nvidia-cublas-cu12==12.4.5.8
+nvidia-cuda-cupti-cu12==12.4.127
+nvidia-cuda-nvrtc-cu12==12.4.127
+nvidia-cuda-runtime-cu12==12.4.127
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.2.1.3
+nvidia-curand-cu12==10.3.5.147
+nvidia-cusolver-cu12==11.6.1.9
+nvidia-cusparse-cu12==12.3.1.170
+nvidia-nccl-cu12==2.21.5
+nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu12==12.4.127
+packaging==24.1
 passlib==1.7.4
+pillow==11.0.0
 platformdirs==4.3.6
 pre_commit==4.0.1
 pyasn1==0.6.1
@@ -33,14 +57,28 @@ python-jose==3.3.0
 python-multipart==0.0.16
 pytz==2024.2
 PyYAML==6.0.2
--e git+https://github.com/nlp-tlp/quickgraph@31c9fbcc2c82f8d0c6d99301280133693de5ae7a#egg=QuickGraph&subdirectory=server
+-e git+https://github.com/nlp-tlp/quickgraph@3b37f59716c0301b02e58370c1f0844e697d20a1#egg=QuickGraph&subdirectory=server
+regex==2024.9.11
+requests==2.32.3
 rsa==4.9
+safetensors==0.4.5
+scikit-learn==1.5.2
+scipy==1.14.1
+sentence-transformers==3.2.1
 six==1.16.0
 sniffio==1.3.1
 starlette==0.41.2
+sympy==1.13.1
+threadpoolctl==3.5.0
+tokenizers==0.20.1
+torch==2.5.1
+tqdm==4.66.6
+transformers==4.46.1
+triton==3.1.0
 types-pyasn1==0.6.0.20240913
 types-python-jose==3.3.4.20240106
 typing_extensions==4.12.2
 tzdata==2024.2
+urllib3==2.2.3
 uvicorn==0.32.0
 virtualenv==20.27.1
