--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@ node_modules
 .env*
 venv
 
+# Docs
+static/img/*
+!static/img/.gitkeep
+
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
