--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,13 +58,29 @@ services:
 
   init-static-img:
     image: curlimages/curl:latest
+    user: root
     volumes:
-      - static_img:/static_img
+      - static_img:/app/static/img
+    healthcheck:
+      test: ["CMD", "test", "-f", "/app/static/img/.initialized"]
+      interval: 10s
+      timeout: 5s
+      retries: 100  # Allow plenty of retries for large download
     command: >
       sh -c '
-      cd /static_img &&
-      curl -L https://nlp-tlp.s3.ap-southeast-2.amazonaws.com/static-img.tar.gz | tar xz --strip-components=3 &&
-      touch .initialized
+      mkdir -p /app/static/img &&
+      chmod 777 /app/static/img &&
+      cd /app/static/img &&
+      if [ ! -f .initialized ]; then
+        echo "Attempting to download static images (this may take several minutes)..." &&
+        curl -L --progress-bar https://nlp-tlp.s3.ap-southeast-2.amazonaws.com/static-img.tar.gz -o static-img.tar.gz &&
+        echo "\nDownload complete, extracting..." &&
+        tar xzf static-img.tar.gz --strip-components=3 &&
+        rm static-img.tar.gz &&
+        echo "Extraction complete"
+      fi &&
+      touch .initialized &&
+      chmod -R 755 /app/static/img
       '
 
 volumes:
