--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,28 +1,22 @@
 # Build stage
 FROM node:20-slim as build
-
 WORKDIR /app
-
 # Copy package files
 COPY package*.json ./
-
 # Install dependencies
 RUN npm install
-
 # Copy source code
 COPY . .
-
 # Build the app
 RUN npm run build
 
 # Production stage
 FROM nginx:alpine
-
 # Copy the built assets from build stage
 COPY --from=build /app/dist /usr/share/nginx/html
-
+# Copy nginx configuration
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 # Expose port 80
 EXPOSE 80
-
 # Start nginx
 CMD ["nginx", "-g", "daemon off;"]
